--- a/package.json
+++ b/package.json
@@ -23,23 +23,24 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
-    "@aws-cdk/aws-certificatemanager": "^1.130.0",
-    "@aws-cdk/aws-cloudfront": "^1.130.0",
-    "@aws-cdk/aws-ec2": "^1.130.0",
-    "@aws-cdk/aws-ecr": "^1.130.0",
-    "@aws-cdk/aws-ecs": "^1.130.0",
-    "@aws-cdk/aws-ecs-patterns": "^1.130.0",
-    "@aws-cdk/aws-elasticloadbalancingv2": "^1.130.0",
-    "@aws-cdk/aws-elasticloadbalancingv2-targets": "^1.130.0",
-    "@aws-cdk/aws-iam": "^1.130.0",
-    "@aws-cdk/aws-lambda": "^1.130.0",
-    "@aws-cdk/aws-route53": "^1.130.0",
-    "@aws-cdk/aws-route53-targets": "^1.130.0",
-    "@aws-cdk/aws-s3": "^1.130.0",
-    "@aws-cdk/aws-s3-deployment": "^1.130.0",
-    "@aws-cdk/aws-secretsmanager": "^1.130.0",
-    "@aws-cdk/aws-ssm": "^1.130.0",
-    "@aws-cdk/core": "^1.130.0",
+    "@aws-cdk/aws-certificatemanager": "1.130.0",
+    "@aws-cdk/aws-cloudformation": "1.130.0",
+    "@aws-cdk/aws-cloudfront": "1.130.0",
+    "@aws-cdk/aws-ec2": "1.130.0",
+    "@aws-cdk/aws-ecr": "1.130.0",
+    "@aws-cdk/aws-ecs": "1.130.0",
+    "@aws-cdk/aws-ecs-patterns": "1.130.0",
+    "@aws-cdk/aws-elasticloadbalancingv2": "1.130.0",
+    "@aws-cdk/aws-elasticloadbalancingv2-targets": "1.130.0",
+    "@aws-cdk/aws-iam": "1.130.0",
+    "@aws-cdk/aws-lambda": "1.130.0",
+    "@aws-cdk/aws-route53": "1.130.0",
+    "@aws-cdk/aws-route53-targets": "1.130.0",
+    "@aws-cdk/aws-s3": "1.130.0",
+    "@aws-cdk/aws-s3-deployment": "1.130.0",
+    "@aws-cdk/aws-secretsmanager": "1.130.0",
+    "@aws-cdk/aws-ssm": "1.130.0",
+    "@aws-cdk/core": "1.130.0",
     "fs-extra": "^10.0.0",
     "source-map-support": "^0.5.20"
   }
