--- a/package.json
+++ b/package.json
@@ -12,36 +12,21 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "^1.130.0",
+    "@aws-cdk/assert": "^2.15.0",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.6",
-    "cdk-ecr-deployment": "^0.0.80",
+    "cdk-ecr-deployment": "^2.2.0",
     "jest": "^27.3.1",
+    "aws-cdk": "2.15.0",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
   },
   "dependencies": {
-    "@aws-cdk/aws-certificatemanager": "1.130.0",
-    "@aws-cdk/aws-cloudformation": "1.130.0",
-    "@aws-cdk/aws-cloudfront": "1.130.0",
-    "@aws-cdk/aws-ec2": "1.130.0",
-    "@aws-cdk/aws-ecr": "1.130.0",
-    "@aws-cdk/aws-ecs": "1.130.0",
-    "@aws-cdk/aws-ecs-patterns": "1.130.0",
-    "@aws-cdk/aws-elasticloadbalancingv2": "1.130.0",
-    "@aws-cdk/aws-elasticloadbalancingv2-targets": "1.130.0",
-    "@aws-cdk/aws-iam": "1.130.0",
-    "@aws-cdk/aws-lambda": "1.130.0",
-    "@aws-cdk/aws-route53": "1.130.0",
-    "@aws-cdk/aws-route53-targets": "1.130.0",
-    "@aws-cdk/aws-s3": "1.130.0",
-    "@aws-cdk/aws-s3-deployment": "1.130.0",
-    "@aws-cdk/aws-secretsmanager": "1.130.0",
-    "@aws-cdk/aws-ssm": "1.130.0",
-    "@aws-cdk/core": "1.130.0",
+    "aws-cdk-lib": "^2.15.0",
     "fs-extra": "^10.0.0",
-    "source-map-support": "^0.5.20"
+    "source-map-support": "^0.5.20",
+    "constructs": "^10.0.0"
   }
 }
