--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^16.11.6",
     "cdk-ecr-deployment": "^2.2.0",
     "jest": "^27.3.1",
+    "aws-cdk": "2.15.0",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
