--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.6",
-    "cdk-ecr-deployment": "^2.2.0",
+    "cdk-ecr-deployment": "^2.5.1",
     "jest": "^27.3.1",
-    "ts-jest": "^27.0.7",
+    "ts-jest": "^27.1.4",
     "ts-node": "^10.4.0",
-    "typescript": "^4.4.4"
+    "typescript": "^4.6.3"
   },
   "dependencies": {
-    "aws-cdk-lib": "^2.15.0",
+    "aws-cdk-lib": "^2.20.0",
+    "constructs": "^10.0.112",
     "fs-extra": "^10.0.0",
-    "source-map-support": "^0.5.20",
-    "constructs": "^10.0.0"
+    "source-map-support": "^0.5.20"
   }
 }
