added flags to reduce time for tests

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -4,6 +4,10 @@ on:
     branches:
       - main
 
+env:
+  CI: true
+  FORCE_PREBUILT_LAMBDA: true
+
 jobs:
   cloud-tests:
     runs-on: ubuntu-latest
